# lsmcp

./: .gitignore  Cargo.toml  PACKAGING.md  PKGBUILD  README.md  TROUBLESHOOTING.md  build.rs  flake.nix  lsmcp.spec  send-mcp-init.sh  test-full-mcp.sh  test-mcp-init.sh
debian/: changelog  control  copyright  rules
docs/: ARCHITECTURE.md  PLAN.md
registry/: README.md  bash-language-server.toml  clangd.toml  dockerfile-language-server.toml  elixir-ls.toml  haskell-language-server.toml  jdtls.toml  lua-language-server.toml  marksman.toml  metals.toml  rust-analyzer.toml  solargraph.toml  svelte-language-server.toml  taplo.toml  texlab.toml  vscode-css-language-server.toml  vscode-html-language-server.toml  vscode-json-language-server.toml  vue-language-server.toml  yaml-language-server.toml  zls.toml
scripts/: sync-mason-registry.rs
src/: installer.rs  lib.rs  main.rs
src/config/: defaults.rs  loader.rs  mod.rs  registry.rs  user_config.rs
src/lsp/: client.rs  manager.rs  mod.rs  process.rs
src/lsp/languages/: mod.rs
src/mcp/: mod.rs  protocol.rs  server.rs  tools.rs
src/tools/: definition.rs  hover.rs  mod.rs  references.rs  symbols.rs
src/types/: errors.rs  mcp.rs  mod.rs
src/utils/: logging.rs  mod.rs  position.rs  uri.rs
